# valinor

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  clippy.toml
.cargo/: config.toml
.github/workflows/: rust.yml
bit-twiddling-helpers/: Cargo.toml
bit-twiddling-helpers/src/: lib.rs
illuvatar-service/: Cargo.toml  README.md
illuvatar-service/src/: main.rs
illuvatar-service/src/handlers/: status.rs
illuvatar-service/src/handlers/snapshots/: illuvatar_service__handlers__status__tests__status_happy_path.snap
valhalla-graphtile/: Cargo.toml  README.md
valhalla-graphtile/fixtures/: andorra-tiles.tar  andorra-traffic.tar
valhalla-graphtile/fixtures/andorra-tiles-with-traffic/0/003/: 015.gph
valhalla-graphtile/fixtures/andorra-tiles/0/003/: 015.gph
valhalla-graphtile/fixtures/andorra-tiles/1/047/: 701.gph
valhalla-graphtile/fixtures/andorra-tiles/2/000/762/: 485.gph  486.gph
valhalla-graphtile/fixtures/andorra-tiles/2/000/763/: 925.gph  926.gph  927.gph
valhalla-graphtile/proptest-regressions/: spatial.txt
valhalla-graphtile/proptest-regressions/graph_tile/: predicted_speeds.txt
valhalla-graphtile/src/: graph_id.rs  graph_reader.rs  graph_tile.rs  internal_macros.rs  lib.rs  macros.rs  shape_codec.rs  spatial.rs  tile_hierarchy.rs  traffic_tile.rs
valhalla-graphtile/src/graph_tile/: access_restriction.rs  admin.rs  builder.rs  directed_edge.rs  edge_info.rs  header.rs  mod.rs  node.rs  node_info.rs  node_transition.rs  predicted_speeds.rs  sign.rs  transit.rs  turn_lane.rs
valhalla-graphtile/src/graph_tile/header/: builder.rs
valhalla-graphtile/src/graph_tile/snapshots/: valhalla_graphtile__graph_tile__access_restriction__tests__first_access_restriction.snap  valhalla_graphtile__graph_tile__access_restriction__tests__last_access_restriction.snap  valhalla_graphtile__graph_tile__access_restriction__tests__parse_access_restrictions-2.snap  valhalla_graphtile__graph_tile__access_restriction__tests__parse_access_restrictions.snap  valhalla_graphtile__graph_tile__admin__tests__country_iso.snap  valhalla_graphtile__graph_tile__admin__tests__parse_admins-3.snap  valhalla_graphtile__graph_tile__admin__tests__parse_admins.snap  valhalla_graphtile__graph_tile__admin__tests__raw_admin_snapshot.snap  valhalla_graphtile__graph_tile__directed_edge__test__first_directed_edge.snap  valhalla_graphtile__graph_tile__directed_edge__test__last_directed_edge.snap  valhalla_graphtile__graph_tile__directed_edge__test__parse_nodes-2.snap  valhalla_graphtile__graph_tile__directed_edge__test__parse_nodes.snap  valhalla_graphtile__graph_tile__header__test__parse_header.snap  valhalla_graphtile__graph_tile__header__test__parse_header_l2.snap  valhalla_graphtile__graph_tile__node__test__first_node.snap  valhalla_graphtile__graph_tile__node__test__first_transition.snap  valhalla_graphtile__graph_tile__node__test__last_node.snap  valhalla_graphtile__graph_tile__node__test__last_transition.snap  valhalla_graphtile__graph_tile__node__test__parse_nodes-2.snap  valhalla_graphtile__graph_tile__node_info__test__parse_nodes-2.snap  valhalla_graphtile__graph_tile__node_info__test__parse_nodes.snap  valhalla_graphtile__graph_tile__node_transition__test__parse_transitions-2.snap  valhalla_graphtile__graph_tile__node_transition__test__parse_transitions.snap  valhalla_graphtile__graph_tile__tests__edge_info-2.snap  valhalla_graphtile__graph_tile__tests__edge_info-3.snap  valhalla_graphtile__graph_tile__tests__edge_info.snap  valhalla_graphtile__graph_tile__tests__first_edge_info.snap  valhalla_graphtile__graph_tile__tests__first_edge_info_decoded_shape.snap  valhalla_graphtile__graph_tile__tests__first_edge_info_names.snap  valhalla_graphtile__graph_tile__tests__get_opp_edge_index.snap  valhalla_graphtile__graph_tile__tests__last_edge_info.snap  valhalla_graphtile__graph_tile__tests__other_edge_info.snap  valhalla_graphtile__graph_tile__tests__other_edge_info_names.snap  valhalla_graphtile__graph_tile__turn_lane__tests__parse_turn_lanes.snap
valhalla-graphtile/src/snapshots/: valhalla_graphtile__graph_tile__tests__edge_bins.snap  valhalla_graphtile__graph_tile__tests__first_edge_info.snap  valhalla_graphtile__graph_tile__tests__first_edge_info_decoded_shape.snap  valhalla_graphtile__graph_tile__tests__first_edge_info_decoded_shape_f32.snap  valhalla_graphtile__graph_tile__tests__first_edge_info_names.snap  valhalla_graphtile__graph_tile__tests__get_opp_edge_index.snap  valhalla_graphtile__graph_tile__tests__last_edge_info.snap  valhalla_graphtile__graph_tile__tests__other_edge_info.snap  valhalla_graphtile__graph_tile__tests__other_edge_info_names.snap
valhalla-graphtile/src/tile_provider/: directory.rs  directory_tile_provider.rs  mod.rs  tarball.rs  traffic.rs
valhalla-microservice/: Cargo.toml  README.md
valhalla-microservice/src/: error.rs  http_protocol.rs  lib.rs  result.rs
valhalla-microservice/src/snapshots/: valhalla_microservice__http_protocol__tests__decode_http_info_message.snap  valhalla_microservice__result__tests__serialize_http.snap
valhalla-proto/: Cargo.toml  build.rs
valhalla-proto/proto/: README.md  common.proto  options.proto
valhalla-proto/src/: lib.rs  proto.rs
valhalla-proto/src/snapshots/: valhalla_proto__tests__decode_api_message.snap
valhalla-response/: Cargo.toml
valhalla-response/src/: lib.rs
valhalla-traffic/: Cargo.toml
valhalla-traffic/src/: commands.rs  encoding.rs  main.rs  traffic.rs  utils.rs
valinor-cli/: Cargo.toml  README.md
valinor-cli/src/: main.rs
valinor-export-edges/: Cargo.toml  README.md
valinor-export-edges/src/: helpers.rs  main.rs  models.rs
valinor-export-graph/: Cargo.toml  README.md
valinor-export-graph/src/: main.rs  models.rs  writer.rs
valinor-map-match/: Cargo.toml
valinor-map-match/src/: main.rs
valinor-sif/: Cargo.toml  README.md
valinor-sif/sample_results/: valhalla.geojson  valinor-sif-poc.geojson
valinor-sif/src/: lib.rs
