[workspace]
resolver = "2"

members = [
    "valhalla-graphtile",
    "valinor-export-edges",
]

[workspace.dependencies]
anyhow = "1.0.89"
bit-set = "0.8.0"
bytes = "1.7.2"
geo = "0.28.0"
indicatif = "0.17.8"
insta = { version = "1.40.0", features = ["yaml"] }
lru = "0.12.5"
num-traits = "0.2.19"
polyline = "0.11.0"
rand = "0.8.5"
serde = "1.0.210"
serde_derive = "1.0.210"
serde_json = "1.0.132"
thiserror = "1.0.64"
zerocopy = "0.8.5"
zerocopy-derive = "0.8.5"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "thin"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
missing_errors_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
