[workspace]
resolver = "2"

members = [
    "bit-twiddling-helpers",
    "illuvatar-service",
    "valhalla-graphtile",
    "valhalla-microservice",
    "valhalla-proto",
    "valhalla-response",
    "valinor-export-graph",
]

[workspace.dependencies]
anyhow = "1.0.89"
base64 = "0.22.1"
bitfield-struct = "0.11.0"
bit-set = "0.8.0"
bit-twiddling-helpers = { path = "bit-twiddling-helpers" }
chrono = "0.4.42"
clap = { version = "4.5.45", features = ["derive", "env"] }
dashmap = "6.1.0"
futures = "0.3.31"
geo = "0.31.0"
http = "1.3.1"
indicatif = "0.18.0"
insta = { version = "1.40.0", features = ["yaml"] }
itertools = "0.14.0"
lru = "0.16.0"
memmap2 = "0.9.9"
num_enum = "0.7.5"
polyline = "0.11.0"
proptest = "1.8.0"
rand = "0.9.0"
rayon = "1.11.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = "3.14.0"
serde_json = "1.0.132"
thiserror = "2.0.11"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
valhalla-proto = { path = "valhalla-proto" }
valhalla-microservice = { path = "valhalla-microservice" }
valhalla-response = { path = "valhalla-response" }
zerocopy = "0.8.5"
zerocopy-derive = "0.8.5"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
lto = "thin"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
missing_errors_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
