[package]
name = "valhalla-graphtile"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Ian Wagner <ian@stadiamaps.com>"]

[features]
serde = ["dep:serde"]
serialize_predicted_speed = ["serde"]

[dependencies]
thiserror = { workspace = true }
geo = { workspace = true }
bitfield-struct = "0.10.1"
bytes = { workspace = true }
bytes-varint = "1.0.3"
enumset = "1.1.5"
lru = { workspace = true }
serde = { workspace = true, optional = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
