[package]
name = "valhalla-graphtile"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Ian Wagner <ian@stadiamaps.com>"]

[features]
serde = ["dep:serde"]
serialize_predicted_speed = ["serde"]

[dependencies]
self_cell = "1.2.0"
thiserror = { workspace = true }
geo = { workspace = true }
bitfield-struct = { workspace = true }
bit-twiddling-helpers = { workspace = true }
enumset = "1.1.7"
integer-encoding = "4.0.2"
lru = { workspace = true }
serde = { workspace = true, optional = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rand = { workspace = true }

[lints]
workspace = true
