[package]
name = "valhalla-proto"
description = "Valhalla protobuf message definitions"
version = "0.1.0"
edition = "2024"

[features]
default = ["protoc-vendored"]
protoc-from-src = ["dep:protobuf-src"]
protoc-vendored = ["dep:protoc-bin-vendored"]

[dependencies]
prost = "0.14.1"

[build-dependencies]
prost-build = "0.14.1"
protobuf-src = { version = "2.1.1", optional = true }
protoc-bin-vendored = { version = "3.2.0", optional = true }

[dev-dependencies]
insta = { workspace = true }

[lints]
workspace = true
