[package]
name = "valinor-export-graph"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Ian Wagner <ian@stadiamaps.com>"]

[dependencies]
anyhow = { workspace = true }
bit-set = { workspace = true }
clap = { workspace = true }
geo = { workspace = true }
rayon = "1.11.0"
indicatif = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
valhalla-graphtile = { path = "../valhalla-graphtile", features = ["serde", "serialize_predicted_speed"] }
serde = { workspace = true }
zstd = "0.13.2"

[lints]
workspace = true
