[package]
name = "valinor-export-graph"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Ian Wagner <ian@stadiamaps.com>"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
flatgeobuf = "5.0.0"
geozero = { workspace = true }
indicatif = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
valhalla-graphtile = { path = "../valhalla-graphtile", features = ["serde"] }

[lints]
workspace = true
